[kyo-kernel] alloc bench: kernel comparison rows
Adds a kernel mode to pendingtest.PendingAllocBench mirroring the proto3
allocation rows with ArrowEffect.suspend and ArrowEffect.handle, and records
the measured comparison in the analysis doc.

Measured (isolated JVMs, canonical flags, two bit-identical runs per side):
eager5/eager10 0.0 both sides, resumeFused10 0.0 both sides, stateCont10
kernel 872 vs proto3 904, suspension kernel 16 vs proto3 152, narrowIter
kernel 2872 vs proto3 4664. The per-suspension residual is proto3's next
allocation target; the inline-handle scalar-replacement explanation is
recorded as an unverified hypothesis.